# rustly

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
include/rustly/: display.h  error.h  option.h  panic.h  result.h  rustly.h
tests/: CMakeLists.txt  display_test.cpp  option_test.cpp  panic_test.cpp  result_test.cpp
